@@ -1,3 +1,13 @@
+2005-03-30  Tom Tromey  <tromey@redhat.com>
+
+	* gnu/gcj/io/shs.h (PROTO): Define.
+
+	* gnu/awt/xlib/XGraphics.java: Sorted imports and removed
+	duplicate.
+
+	* gnu/gcj/runtime/SharedLibHelper.java: Sorted imports and removed
+	duplicate.
+
 2005-03-29  Tom Tromey  <tromey@redhat.com>
 
 	* Makefile.in, configure: Rebuilt.
